# cpp-game-systems-framework-

./: .gitignore  CMakeLists.txt  CODING_SESSION_CHANGES.md  FRAMEWORK_OVERVIEW.md  FRAMEWORK_USAGE.md  PROJECT_DESIGN.md  README.md
benchmarks/: runtime_benchmark.cpp
demo/: CombatGameplay.cpp  CombatGameplay.h  main.cpp
demo/assets/: combat_demo.prefab
include/GameCore/Components/: AttackComponent.h  AttackIntentComponent.h  HealthComponent.h  MoveIntentComponent.h  NameComponent.h  PositionComponent.h  ProgressComponent.h  RenderableComponent.h  TransformComponent.h
include/GameCore/Core/: Application.h  ApplicationContext.h  AssetLoaders.h  ComponentStorage.h  Diagnostics.h  Entity.h  EntityManager.h  EntityPrefab.h  EventBus.h  FileSystem.h  InputManager.h  KeyValuePrefabLoader.h  ResourceManager.h  Scene.h  SceneManager.h  SdlInputBackend.h  StateMachine.h  System.h  SystemScheduler.h  Time.h  World.h
include/GameCore/Systems/: AttackIntentSystem.h  CombatEvents.h  CombatSystem.h  MovementSystem.h  RenderSystem.h  SdlRenderBackend.h  TransformSystem.h
src/Core/: Application.cpp  AssetLoaders.cpp  Diagnostics.cpp  EntityManager.cpp  EntityPrefab.cpp  FileSystem.cpp  InputManager.cpp  KeyValuePrefabLoader.cpp  Scene.cpp  SceneManager.cpp  SdlInputBackend.cpp  SystemScheduler.cpp  Time.cpp
src/Systems/: AttackIntentSystem.cpp  CombatSystem.cpp  MovementSystem.cpp  RenderSystem.cpp  SdlRenderBackend.cpp  TransformSystem.cpp
tests/: basic_tests.cpp  combat_gameplay_tests.cpp  world_tests.cpp
